--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>MobileNetHealth</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Real time Allocation of healthcare facility resources based on supply and demand</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -205,17 +205,8 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+In a health care facility every resource we have valuable. What can be done to improve the resource utilization; Yet provide quality care? Just as Just in Time (JIT) manufacturing technology has drastically changed manufacturing towards zero defects; we could apply the same principle towards hospital resources. The goal is twofold; quality care by eliminating wastage. Fortunately , recent advancements has given a tremendous amount of tools that can be leveraged to archive this, Important fact the system will be build upon is the fact that ease of availability of mobile devices for all the players involved.
+		  
           </p>
         </div>
       </div>
@@ -223,18 +214,8 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+How does this work? A set of tasks and their priority is defined in a cloud based set up for the facility such as hospital. Facility will be able to login and define the process, sequence, priority, dependencies and additional operational details such as parties need to be notified. Who are all the players? Person or patient who is carrying the mobile device, hospital staff carrying the mobile devices and interface with mobile devices. What do you mean by allocating resources? A simple example is depending on the availability of resource such as say an MRI machine or a procedure, mobile device will communicate with the cloud based system and finds the most optimum way (By querying a set of algorithms in the cloud) Since every stake holder has multi-way communication thru mobile devices the cloud based system will notify the player of next steps. Be it to the patient or to nurse or a MRI technician			
+		  </p>
         </div>
         <div class="span5 asset">
           <img class="img-polaroid" src="http://placehold.it/480x300">
