--- a/index.html
+++ b/index.html
@@ -205,16 +205,37 @@
         </div>
         <div class="span5 copy">
           <p>
-In a health care facility every resource we have valuable. What can be done to improve the resource utilization; Yet provide quality care? Just as Just in Time (JIT) manufacturing technology has drastically changed manufacturing towards zero defects; we could apply the same principle towards hospital resources. The goal is twofold; quality care by eliminating wastage. Fortunately , recent advancements has given a tremendous amount of tools that can be leveraged to archive this, Important fact the system will be build upon is the fact that ease of availability of mobile devices for all the players involved.
-		  
+How can a mobile device can be used to address the basic issue of balancing a load of service requests to service providers?
+</P>
+<p>
+The initial targeted market for this product is hospitals and public utility service centers such city administration offices although concept can be widely scaled across many entities.
+Key criteria for choosing this is where a physical presence of the person is needed. 
+The goal of the product is to maximize the use of available resources to provide the best services possible; be it in hospital settings or be it a city service center applying for new building permits.
+
           </p>
-        </div>
+
+		  </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-How does this work? A set of tasks and their priority is defined in a cloud based set up for the facility such as hospital. Facility will be able to login and define the process, sequence, priority, dependencies and additional operational details such as parties need to be notified. Who are all the players? Person or patient who is carrying the mobile device, hospital staff carrying the mobile devices and interface with mobile devices. What do you mean by allocating resources? A simple example is depending on the availability of resource such as say an MRI machine or a procedure, mobile device will communicate with the cloud based system and finds the most optimum way (By querying a set of algorithms in the cloud) Since every stake holder has multi-way communication thru mobile devices the cloud based system will notify the player of next steps. Be it to the patient or to nurse or a MRI technician			
+How does this work?
+</p>
+<p>
+ A set of tasks and their priority is defined in a cloud based set up for the facility such as hospital. Facility will be able to login and define the process, sequence, priority, dependencies and additional operational details such as parties need to be notified.
+</p>
+<p>
+ Who are all the players? 
+</p> 
+<P> 
+ Person or patient who is carrying the mobile device, hospital staff carrying the mobile devices and interface with mobile devices.
+</p>
+<p>
+ What do you mean by allocating resources? 
+ </p>
+<p>
+ A simple example is depending on the availability of resource such as say an MRI machine or a procedure, mobile device will communicate with the cloud based system and finds the most optimum way (By querying a set of algorithms in the cloud) Since every stake holder has multi-way communication thru mobile devices the cloud based system will notify the player of next steps. Be it to the patient or to nurse or a MRI technician			
 		  </p>
         </div>
         <div class="span5 asset">
