--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>MobileNetHealth</h1>
+          <h1>Home Currency Lense</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Real time Allocation of healthcare facility resources based on supply and demand</p>
+          <p class="lead">An eye that translates to your home currency</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+ 		  <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -201,18 +201,17 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+		<img class="img-polaroid" src="file:///C:/cygwin/home/sabaliva/IMG_0249.jpg/">
         </div>
         <div class="span5 copy">
           <p>
 How can a mobile device can be used to address the basic issue of balancing a load of service requests to service providers?
 </P>
 <p>
-The initial targeted market for this product is hospitals and public utility service centers such city administration offices although concept can be widely scaled across many entities.
-Key criteria for choosing this is where a physical presence of the person is needed. 
-The goal of the product is to maximize the use of available resources to provide the best services possible; be it in hospital settings or be it a city service center applying for new building permits.
-
-          </p>
+Whenever you travel abroad, you must have noticed that it is harder to value of good in your home currency. 
+The local coins makes it even tougher to value. 
+What about the local goods you see marked in say  Chinse youn . This makes it even harder to  judge the value,.
+         </p>
 
 		  </div>
       </div>
@@ -220,16 +219,17 @@ The goal of the product is to maximize the use of available resources to provide
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-How does this work?
+What is the solution?
 </p>
 <p>
- A set of tasks and their priority is defined in a cloud based set up for the facility such as hospital. Facility will be able to login and define the process, sequence, priority, dependencies and additional operational details such as parties need to be notified.
+Waive  you mobile against the coin , currency or the merchandise. You will see the price in your home currency
 </p>
 <p>
- Who are all the players? 
+How does this work
 </p> 
 <P> 
- Person or patient who is carrying the mobile device, hospital staff carrying the mobile devices and interface with mobile devices.
+Challenging to  build. But using combination of machine learning techniques for image recognition and internet connectivy 
+to global financial net work.
 </p>
 <p>
  What do you mean by allocating resources? 
