--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">An eye that translates to your home currency</p>
+          <p class="lead">See and feel the value in your home currency.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -201,17 +201,11 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-		<img class="img-polaroid" src="file:///C:/cygwin/home/sabaliva/IMG_0249.jpg/">
+		<img class="img-polaroid" src="IMG_0249.jpg">
         </div>
         <div class="span5 copy">
-          <p>
-How can a mobile device can be used to address the basic issue of balancing a load of service requests to service providers?
-</P>
-<p>
-Whenever you travel abroad, you must have noticed that it is harder to value of good in your home currency. 
-The local coins makes it even tougher to value. 
-What about the local goods you see marked in say  Chinse youn . This makes it even harder to  judge the value,.
-         </p>
+          
+<p>Whenever you travel abroad, you might  have noticed how  hard  it is to value  the merchandize  in your home currency. Think of duty free shops where the price tags are marked in Yen ,Euro  or Yuan .Valuing a coin could also bit time consuming.      </p>
 
 		  </div>
       </div>
@@ -224,22 +218,9 @@ What is the solution?
 <p>
 Waive  you mobile against the coin , currency or the merchandise. You will see the price in your home currency
 </p>
-<p>
-How does this work
-</p> 
-<P> 
-Challenging to  build. But using combination of machine learning techniques for image recognition and internet connectivy 
-to global financial net work.
-</p>
-<p>
- What do you mean by allocating resources? 
- </p>
-<p>
- A simple example is depending on the availability of resource such as say an MRI machine or a procedure, mobile device will communicate with the cloud based system and finds the most optimum way (By querying a set of algorithms in the cloud) Since every stake holder has multi-way communication thru mobile devices the cloud based system will notify the player of next steps. Be it to the patient or to nurse or a MRI technician			
-		  </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="MP900315542.jpg">
         </div>
       </div>
 
@@ -272,7 +253,14 @@ to global financial net work.
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    A question which is commonly asked by users.
+<p>
+How does this work
+</p> 
+<P>
+The price tag is automatically scanned if possible.Image recognition techniques are used to identity the local currency
+or price of a merchandize. Using internet the price conversion is calculated.
+</p>
+
                   </div>
                 </div>
               </div>
