submit hw4 revised

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-		<img class="img-polaroid" src="IMG_0249.jpg">
+		<img  src="IMG_0249.jpg">
         </div>
         <div class="span5 copy">
           
@@ -220,7 +220,7 @@ Waive  you mobile against the coin , currency or the merchandise. You will see t
 </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="MP900315542.jpg">
+          <img  src="MP900315542.jpg">
         </div>
       </div>
 
