submit hw4 image change

--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@ Waive  you mobile against the coin , currency or the merchandise. You will see t
 </p>
         </div>
         <div class="span5 asset">
+				     <img class="img-polaroid" src="http://office.microsoft.com/en-us/images/results.aspx?qu=dollar&ex=2#ai:MP900315542|/480x300">
+
           <img  src="MP900315542.jpg">
         </div>
       </div>
