submit hw4 image change 2

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
- 		  <img class="img-polaroid" src="http://placehold.it/480x300">
+ 		  <img class="img-polaroid" src="http://i.imgur.com/ig7mxms.jpg
+		  ">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -201,8 +202,8 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-		<img  src="IMG_0249.jpg">
-        </div>
+		<img class="img-polaroid" src="http://i.imgur.com/z16DU.jpg">
+		</div>
         <div class="span5 copy">
           
 <p>Whenever you travel abroad, you might  have noticed how  hard  it is to value  the merchandize  in your home currency. Think of duty free shops where the price tags are marked in Yen ,Euro  or Yuan .Valuing a coin could also bit time consuming.      </p>
@@ -221,8 +222,6 @@ Waive  you mobile against the coin , currency or the merchandise. You will see t
         </div>
         <div class="span5 asset">
 				     <img class="img-polaroid" src="http://office.microsoft.com/en-us/images/results.aspx?qu=dollar&ex=2#ai:MP900315542|/480x300">
-
-          <img  src="MP900315542.jpg">
         </div>
       </div>
 
