--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -146,8 +147,9 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
- 		  <img class="img-polaroid" src="http://i.imgur.com/ig7mxms.jpg
-		  ">
+		     <img class="img-polaroid" src="http://placehold.it/480x300">
+			 
+ 	       <!--<img class="img-polaroid" src="http://i.imgur.com/ig7mxms.jpg"> -->
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -202,7 +204,8 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-		<img class="img-polaroid" src="http://i.imgur.com/z16DU.jpg">
+		<!--<img class="img-polaroid" src="http://i.imgur.com/z16DU.jpg">-->
+		<img class="img-polaroid" src="http://i.imgur.com/ig7mxms.jpg">
 		</div>
         <div class="span5 copy">
           
@@ -221,7 +224,8 @@ Waive  you mobile against the coin , currency or the merchandise. You will see t
 </p>
         </div>
         <div class="span5 asset">
-				     <img class="img-polaroid" src="http://office.microsoft.com/en-us/images/results.aspx?qu=dollar&ex=2#ai:MP900315542|/480x300">
+		             <img class="img-polaroid" src="http://i.imgur.com/z16DU.jpg">  
+				     <!--<img class="img-polaroid" src="http://office.microsoft.com/en-us/images/results.aspx?qu=dollar&ex=2#ai:MP900315542|/480x300">  -->
         </div>
       </div>
 
