--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"
           rel="stylesheet" type="text/css">
     <style type="text/css">
 
       /* Large desktop */
-      @media (min-width: 980px) { 
+      @media (min-width: 980px) {
         body {
          padding-top: 60px;
         }
@@ -30,7 +28,7 @@
       }
 
       /* Landscape phones and down */
-      @media (max-width: 480px) { 
+      @media (max-width: 480px) {
        .copy {
          padding: 2.5% 10%;
        }
@@ -135,9 +133,9 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Home Currency Lense</h1>
+          <h1>Home Currency Lens</h1>
         </div>
-      </div> 
+      </div>
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
@@ -147,19 +145,20 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-		     <img class="img-polaroid" src="http://placehold.it/480x300">
-			 
- 	       <!--<img class="img-polaroid" src="http://i.imgur.com/ig7mxms.jpg"> -->
+<img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
+
+  <!--<img class="img-polaroid" src="http://i.imgur.com/ig7mxms.jpg"> -->
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
+		<div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
-                different in horizontal and vertical layouts, illustrating
-                media queries. -->
+different in horizontal and vertical layouts, illustrating
+media queries. -->
                 <div class="linediv-l">
                 <h3>1000</h3> <p>backers</p>
                 </div>
@@ -176,6 +175,7 @@
               </div>
             </div>
           </div>
+		  <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -184,18 +184,24 @@
               <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
+		  </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
-          </div>
+          </div> 
+		  </div>
+          <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+		  </div>
         </div>
+		</div>
       </div>
 
       <!-- Beyond this part the marketing copy begins. -->
@@ -204,14 +210,14 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-		<!--<img class="img-polaroid" src="http://i.imgur.com/z16DU.jpg">-->
-		<img class="img-polaroid" src="http://i.imgur.com/ig7mxms.jpg">
-		</div>
+<!--<img class="img-polaroid" src="http://i.imgur.com/z16DU.jpg">-->
+<img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/ig7mxms.jpg">
+</div>
         <div class="span5 copy">
           
-<p>Whenever you travel abroad, you might  have noticed how  hard  it is to value  the merchandize  in your home currency. Think of duty free shops where the price tags are marked in Yen ,Euro  or Yuan .Valuing a coin could also bit time consuming.      </p>
+<p>Whenever you travel abroad, you might have noticed how hard it is to value the merchandize in your home currency. Think of duty free shops where the price tags are marked in Yen ,Euro or Yuan .Valuing a coin could also bit time consuming. </p>
 
-		  </div>
+</div>
       </div>
 
       <div class="row-fluid section2">
@@ -220,12 +226,12 @@
 What is the solution?
 </p>
 <p>
-Waive  you mobile against the coin , currency or the merchandise. You will see the price in your home currency
+Waive you mobile against the coin , currency or the merchandise. You will see the price in your home currency
 </p>
         </div>
         <div class="span5 asset">
-		             <img class="img-polaroid" src="http://i.imgur.com/z16DU.jpg">  
-				     <!--<img class="img-polaroid" src="http://office.microsoft.com/en-us/images/results.aspx?qu=dollar&ex=2#ai:MP900315542|/480x300">  -->
+<img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/z16DU.jpg">
+<!--<img class="img-polaroid" src="http://office.microsoft.com/en-us/images/results.aspx?qu=dollar&ex=2#ai:MP900315542|/480x300"> -->
         </div>
       </div>
 
@@ -260,7 +266,7 @@ Waive  you mobile against the coin , currency or the merchandise. You will see t
                   <div class="accordion-inner">
 <p>
 How does this work
-</p> 
+</p>
 <P>
 The price tag is automatically scanned if possible.Image recognition techniques are used to identity the local currency
 or price of a merchandize. Using internet the price conversion is calculated.
