--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
       .footer a {
         color: #ccccff;
       }
+      /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */      
+      div.addthis_toolbox {
+      width:180px;
+      margin: 0 auto;
+     }
     </style>
   </head>
   <body>
@@ -280,6 +285,22 @@ or price of a merchandize. Using internet the price conversion is calculated.
 
       </div>
 
+
+<div class="span8 offset2 social">
+  <!-- AddThis Button BEGIN -->
+  <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+    <a class="addthis_button_preferred_1"></a>
+    <a class="addthis_button_preferred_2"></a>
+    <a class="addthis_button_compact"></a>
+    <a class="addthis_counter addthis_bubble_style"></a>
+  </div>
+   <script type="text/javascript">var addthis_config = 
+    {"data_track_addressbar":true};</script>
+   <script type="text/javascript" 
+           src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51e5f5d9549fdf9b"></script>
+  <!-- AddThis Button END -->
+</div>
+</div>
       <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
       <!-- http://creativecommons.org/licenses/ -->
       <div class="row-fluid footer">
